--- a/blocks/lead/__image-caption/lead__image-caption.css
+++ b/blocks/lead/__image-caption/lead__image-caption.css
@@ -1,10 +1,8 @@
 .lead__image-caption {
-  font-family: Inter, Arial, sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  padding: 6px 16px 0;
+  padding: 6px 16px 64px;
 }
