--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,7 @@
 .intro__list {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0 64px;
   font-weight: 700;
   font-size: 12px;
   line-height: 18px;
