--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,2 +1,11 @@
-.lead {
+@media screen and (min-width: 1024px) {
+  .lead {
+    padding: 0 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead {
+    padding: 0;
+  }
 }
