--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,5 +3,26 @@
   font-weight: 900;
   font-size: 32px;
   line-height: 35px;
-  padding: 33px 16px 16px;
+  max-width: 255px;
+  padding: 0 0 16px;
+  z-index: 1;
+
+}
+
+@media screen and (min-width: 425px) {
+  .cover__title {
+    max-width: 360px;
+    padding: 0 0 32px;
+    font-size: 48px;
+    line-height: 52px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .cover__title {
+    max-width: 560px;
+    padding: 0 0 32px;
+    font-size: 72px;
+    line-height: 76px;
+  }
 }
