--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,8 +2,22 @@
   color: #fff;
   text-decoration: none;
   margin-right: 18px;
+  font-size: 18px;
+  line-height: 20px;
+  transition: opacity .3s;
+}
+
+.header__lang-link:hover {
+  opacity: .6;
 }
 
 .header__lang-link:last-child {
   margin-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .header__lang-link {
+    font-size: 24px;
+    line-height: 28px;
+  }
 }
