--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 288px;
-  padding: 16px 0 48px;
-  margin: 0 auto;
+  padding: 16px 16px 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 28px 24px 48px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    padding: 28px 48px 48px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    padding: 28px 0 56px;
+  }
 }
