--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,3 +6,15 @@
   font-size: 12px;
   line-height: 18px;
 }
+
+@media screen and (min-width: 768px) {
+  .intro__list {
+    padding: 0 0 88px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro__list {
+    padding: 0 0 92px;
+  }
+}
