--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -5,3 +5,9 @@
   line-height: 26px;
   padding: 40px 0 34px;
 }
+
+@media screen and (min-width: 768px) {
+  .intro__subtitle {
+    max-width: 720px;
+  }
+}
