--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,6 +3,22 @@
   font-size: 40px;
   line-height: 44px;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 288px;
   padding: 0 16px 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .lead__title {
+    padding: 0 24px 32px;
+    font-size: 96px;
+    line-height: 100px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__title {
+    padding: 0 0 32px;
+  }
 }
