--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,24 @@
 .photo-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-gap: 12px;
   padding: 0 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .photo-grid {
+    padding: 0 24px 88px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .photo-grid {
+    padding: 0 48px 92px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .photo-grid {
+    padding: 0 0 92px;
+  }
 }
