--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -2,6 +2,20 @@
   margin: 0;
   font-weight: 400;
   font-size: 16px;
-  line-height: 26px;
-  padding: 0 16px;
+  line-height: 24px;
+  padding: 0 16px 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .place__description {
+    padding: 0 0 26px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__description {
+    padding: 0 0 27px;
+    font-size: 18px;
+    line-height: 29px;
+  }
 }
