--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,5 +3,21 @@
   font-weight: 900;
   font-size: 32px;
   line-height: 35px;
-  padding: 50px 16px 32px;
+  padding: 0 16px 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .place__title {
+    padding: 0;
+    max-width: 330px;
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__title {
+    font-size: 72px;
+    line-height: 76px;
+  }
 }
