--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -8,3 +8,9 @@
   padding: 0 16px 12px;
   text-transform: uppercase;
 }
+
+@media screen and (min-width: 768px) {
+  .place__url-heading {
+    padding: 0 0 12px;
+  }
+}
