--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,2 +1,27 @@
 .place {
+  padding: 0 0 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .place {
+    display: grid;
+    grid-template-columns: 340px 1fr;
+    grid-gap: 48px 28px;
+    padding: 0 24px 73px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place {
+    grid-template-columns: 440px 1fr;
+    grid-gap: 48px 32px;
+    padding: 0 0 80px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .place {
+    grid-template-columns: 460px 1fr;
+    grid-gap: 48px 40px;
+  }
 }
