--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,13 +2,13 @@
   margin: 0;
   font-weight: 900;
   font-size: 32px;
-  line-height: 35px;
+  line-height: 1.2;
 }
 
 @media screen and (min-width: 768px) {
   .intro__title {
     font-size: 54px;
-    line-height: 58px;
+    line-height: 1.2;
   }
 }
 
