--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,7 @@
 .place__link {
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.8;
   color: #fff;
   padding: 0 16px;
   transition: opacity .3s;
