--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,7 +2,7 @@
   display: block;
   font-weight: 400;
   font-size: 12px;
-  line-height: 12px;
+  line-height: 1;
   letter-spacing: 2px;
   color: #aaa;
   padding: 0 16px 12px;
