--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-weight: 400;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.2;
   z-index: 1;
   max-width: 260px;
 }
@@ -11,7 +11,6 @@
   .cover__subtitle {
     max-width: 320px;
     font-size: 16px;
-    line-height: 18px;
   }
 }
 
@@ -19,6 +18,5 @@
   .cover__subtitle {
     max-width: 360px;
     font-size: 18px;
-    line-height: 22px;
   }
 }
