--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-weight: 900;
   font-size: 32px;
-  line-height: 35px;
+  line-height: 1.1;
   max-width: 255px;
   padding: 0 0 16px;
   z-index: 1;
@@ -14,7 +14,7 @@
     max-width: 360px;
     padding: 0 0 32px;
     font-size: 48px;
-    line-height: 52px;
+    line-height: 1.1;
   }
 }
 
@@ -23,6 +23,6 @@
     max-width: 560px;
     padding: 0 0 32px;
     font-size: 72px;
-    line-height: 76px;
+    line-height: 1.1;
   }
 }
