--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,7 +4,7 @@
   text-decoration: none;
   font-weight: 400;
   font-size: 24px;
-  line-height: 24px;
+  line-height: 1;
   padding: 0 0 32px;
   transition: opacity .3s;
 }
@@ -17,7 +17,7 @@
   .footer__link {
     padding: 0 18px 0 0;
     font-size: 16px;
-    line-height: 18px;
+    line-height: 1.15;
   }
   .footer__link:last-child {
     padding: 0;
