--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,10 @@
 .header__lang-link {
   color: #fff;
   text-decoration: none;
-  margin-right: 18px;
+  margin-right: 14px;
+  font-weight: 400;
   font-size: 18px;
-  line-height: 20px;
+  line-height: 1.1;
   transition: opacity .3s;
 }
 
@@ -18,6 +19,6 @@
 @media screen and (min-width: 768px) {
   .header__lang-link {
     font-size: 24px;
-    line-height: 28px;
+    line-height: 1.15;
   }
 }
