--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -4,7 +4,7 @@
   padding: 0 0 64px;
   font-weight: 700;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.45;
 }
 
 @media screen and (min-width: 768px) {
