--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,17 +8,20 @@
 @media screen and (min-width: 768px) {
   .photo-grid {
     padding: 0 24px 88px;
+    grid-gap: 16px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .photo-grid {
     padding: 0 48px 92px;
+    grid-gap: 14px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .photo-grid {
     padding: 0 0 92px;
+    grid-gap: 16px;
   }
 }
