--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.62;
   padding: 0 16px 25px;
 }
 
@@ -16,6 +16,5 @@
   .place__description {
     padding: 0 0 27px;
     font-size: 18px;
-    line-height: 29px;
   }
 }
