--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,13 +4,13 @@
 
 @media screen and (min-width: 768px) {
   .places {
-    padding: 0;
+    padding: 0 0 16px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .places {
-    padding: 0 48px;
+    padding: 0 48px 40px;
   }
 }
 
