--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: url("../../../images/cover-trains.jpg") no-repeat;
+  background: url("../../../images/images_webp_min/cover-trains.webp") no-repeat;
   background-size: cover;
   min-height: 200px;
   text-align: center;
