--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -6,9 +6,17 @@
   padding: 0 16px 25px;
 }
 
+.place__description:last-child {
+  padding: 0 16px 0;
+}
+
 @media screen and (min-width: 768px) {
   .place__description {
-    padding: 0 0 26px;
+    padding: 0 0 25px;
+  }
+
+  .place__description:last-child {
+    padding: 0;
   }
 }
 
