--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,10 +1,13 @@
 .place__link {
+  margin: 0 16px;
+  padding: 0;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.8;
+  line-height: 2;
   color: #fff;
-  padding: 0 16px;
   transition: opacity .3s;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
 }
 
 .place__link:hover {
@@ -14,6 +17,12 @@
 
 @media screen and (min-width: 768px) {
   .place__link {
-    padding: 0;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .place__link {
+    line-height: 1;
   }
 }
