--- a/blocks/lead/__image-caption/lead__image-caption.css
+++ b/blocks/lead/__image-caption/lead__image-caption.css
@@ -1,7 +1,7 @@
 .lead__image-caption {
   font-weight: 400;
   font-size: 10px;
-  line-height: .9;
+  line-height: 1.4;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   padding: 6px 16px 64px;
