--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-weight: 900;
   font-size: 32px;
-  line-height: 35px;
+  line-height: 1.1;
   padding: 0 16px 32px;
 }
 
@@ -17,6 +17,6 @@
 @media screen and (min-width: 1024px) {
   .place__title {
     font-size: 72px;
-    line-height: 76px;
+    line-height: 1.1;
   }
 }
